--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-    "token": "readmeoku",
-    "guildid": "readmeoku",
-    "rolid": "readmeoku",
-    "durum": "readmeoku",
-    "logid": "readmeoku",
-    "sesid": "readmeoku",
-    "activity": "readmeoku",
-    "type": "readmeoku",
-	"status": "readmeoku",
-	"surum": "readmeoku"
+    "token": "MTI5MTgyNjE0NjIwMzQwMjMyMA.G58d6x.g68VbaofsPSZ9QEPrtgApETu0I3RMQ_bRxW9Ls",
+    "guildid": "1292023704582098964",
+    "rolid": "1292144388167827487",
+    "durum": "982",
+    "logid": "1292183834858885171",
+    "sesid": "1292184047639990272",
+    "activity": "982 Survival",
+    "type": "PLAYING",
+	"status": "online",
+	"surum": "eski"
 }
