--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTI5MTgyNjE0NjIwMzQwMjMyMA.G58d6x.g68VbaofsPSZ9QEPrtgApETu0I3RMQ_bRxW9Ls",
+    "token": "MTI5MjE4NzQ4NDg4ODg5NTU4OA.GmdO5U.kvm5Y3XzBb7hCStrIW5NmSoBesxu3W6jO3P1kY",
     "guildid": "1292023704582098964",
     "rolid": "1292144388167827487",
     "durum": "982",
