--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTI5MjE4NzQ4NDg4ODg5NTU4OA.GmdO5U.kvm5Y3XzBb7hCStrIW5NmSoBesxu3W6jO3P1kY",
+    "token": "MTI5MjE4NzQ4NDg4ODg5NTU4OA.GqOHGl.aaVlT4guEhj6AO38D_GXEBum8uj8ZylLPnZd8M",
     "guildid": "1292023704582098964",
     "rolid": "1292144388167827487",
     "durum": "982",
